force-app/main/default/objects/SalesAction__c/SalesAction__c.object-meta.xml
<CustomObject>
    <label>営業アクション</label>
    <nameField>
        <displayFormat>SACT-{00000}</displayFormat>
        <label>営業アクション番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>営業アクション</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>