force-app/main/default/objects/SalesAction__c/fields/CreatedByAgent__c.field-meta.xml
<CustomField>
    <fullName>CreatedByAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agentforce由来</label>
    <type>Checkbox</type>
</CustomField>