force-app/main/default/objects/SalesAction__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>期日</label>
    <type>Date</type>
</CustomField>