force-app/main/default/objects/SalesAction__c/fields/DuplicateKey__c.field-meta.xml
<CustomField>
    <fullName>DuplicateKey__c</fullName>
    <formula>Account__r.Name &amp; &quot;|&quot; &amp; TEXT(DueDate__c)</formula>
    <label>重複キー</label>
    <type>Text</type>
</CustomField>