force-app/main/default/objects/SalesAction__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>提案理由</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>