force-app/main/default/objects/SalesAction__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>タイトル</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>