force-app/main/default/objects/SalesAction__c/validationRules/Title_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Title_Required</fullName>
    <active>true</active>
    <description>タイトルは必須（空白のみも不可）</description>
    <errorConditionFormula>LEN(TRIM(Title__c)) = 0</errorConditionFormula>
    <errorDisplayField>Title__c</errorDisplayField>
    <errorMessage>タイトルは必須です</errorMessage>
</ValidationRule>